--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -8,32 +8,33 @@
 
 <div class="row">
     <div class="col-lg-12">
-                <h2 style="
+        <h2 style="
             font-size: 20px;
             font-weight: 700;
             color: #bbb;
             text-transform: uppercase;
-            letter-spacing: 1px;">Hromadné emaily : {{ctype}}</h2>
+            letter-spacing: 1px;
+            margin-top: 5px;">Hromadné emaily : {{ctype}}</h2>
     </div>
     <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
 <div  class="row">
 
-    <table  class="table table-striped table-condensed" style="width: 80%"  >
+    <table  class="table table-striped table-condensed"   >
         <thead>
             <tr>
-                <th><div class="input-group input-group">
+                <th ><div style="margin-bottom: 1em;" class="input-group input-group">
             <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f.searchString)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
-            <div class="input-group-btn">
+            <div   class="input-group-btn">
                 <button class="btn btn-default btn"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
         </th>
-        <th>
+        <th  ng-show="{{ctype === 'FINISHED'}}" >
         </th>
         <th></th>
-        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový kampaň</a></th>
+        <th class="text-right"><a style="margin-bottom: 1em;"class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nová kampaň</a></th>
         </tr>
         <tr>
             <th class="text-info">Název</th>
@@ -51,14 +52,14 @@
         </tfoot>
         <tbody>
             <tr ng-repeat="c in campains" >
-                <td  class="col-lg-4" ><b>{{c.campainName}}</b></td>
+                <td  ><b>{{c.campainName}}</b></td>
                 <td class="text-right" >{{c.recordsCount}}</td>
                 <td class="text-right" ng-show="{{ctype === 'FINISHED'}}"  >{{c.recordsSent}}</td>
                 <td class="text-right">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-warning dropdown-toggle dr" data-toggle="dropdown">Action <span class="caret"></span>
+                        <button type="button" class="btn-xs btn-info dropdown-toggle dr" data-toggle="dropdown"><span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-left" >
+                        <ul class="dropdown-menu dropdown-menu-right" >
                             <li ng-show="{{ ctype === 'FINISHED'}}"> <a ng-href="#/campain/{{c.id}}"  >Zobrazit emaily</a></li>
                             <li ng-show="{{ ctype === 'FINISHED'}}"> <a ng-href="#/campain-stats/{{c.id}}"  >Statistiky</a></li>
                             <li ng-show="{{ctype === 'EDIT'}}"> <a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
