--- a/src/main/webapp/WEB-INF/ui/views/user/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/edit.html
@@ -1,4 +1,10 @@
-
+<div class="row>" >
+    <ol class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li class="active"><i class="fa fa-envelope"></i>&nbsp;Kampaně</li>
+        <li class="active"><i class="fa fa-list"></i>&nbsp;{{ctype}}</li>
+    </ol>
+</div>
 <tabset>
     <tab>
         <tab-heading>
