--- a/src/main/webapp/WEB-INF/ui/views/user/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/list.html
@@ -1,4 +1,9 @@
-
+<div class="row>" >
+    <ol class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li class="active"><i class="fa fa-envelope"></i>&nbsp;Uživatelé</li>
+    </ol>
+</div>
 <div class="row">
     <div class="col-lg-12">
                 <h2 style="
@@ -13,20 +18,16 @@
 <!-- /.row -->
 <div  class="row">
 
-    <table  class="table table-striped table-condensed" style="width: 80%"  >
+    <table  class="table table-striped table-condensed"   >
         <thead>
             <tr>
-                <th><div class="input-group input-group">
+                <th><div style="margin-bottom: 1em;"  class="input-group input-group">
             <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f.searchString)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
             <div class="input-group-btn">
-                <button class="btn btn-default btn"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <button  style="margin-bottom: 1em;"  class="btn btn-default btn"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
-        </div>
-        </th>
-        <th>
-        </th>
-        <th></th>
-        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový kampaň</a></th>
+        </div></th>
+        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový uživatel</a></th>
         </tr>
         <tr>
             <th class="text-info">Jméno</th>
@@ -35,19 +36,19 @@
 
         </thead>
         <tfoot>
-            <tr><td colspan="4">
+            <tr><td colspan="2">
         <pagination  page="currentPage" on-select-page="paginate(page-1)" ></pagination>
         </td>
         </tr>
         </tfoot>
         <tbody>
             <tr ng-repeat="u in users" >
-                <td  class="col-lg-4" ><b>{{u.firstName}} {{u.lastName}}</b></td>
+                <td  ><b>{{u.firstName}} {{u.lastName}}</b></td>
                 <td class="text-right">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-warning dropdown-toggle dr" data-toggle="dropdown">Action <span class="caret"></span>
+                        <button type="button" class="btn btn-xs btn-warning dropdown-toggle dr" data-toggle="dropdown"><span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-left" >
+                        <ul class="dropdown-menu dropdown-menu-right" >
                             <li > <a ng-href="#/users/{{u.id}}"  >Upravit</a></li>
                             <li class="divider"></li>
                             <li ><a ng-click="openDeleteDialog(u.id, u.firstName)" >Smazat</a></li>
