--- a/src/main/webapp/WEB-INF/ui/views/user/login.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/login.html
@@ -1,38 +1,38 @@
 
-<div ng-show="mode">
-<div class="page-header">
-	<h2>Login</h2>
-</div>
-
-<div class="row">
-
-	<div class="col-md-6">
-		<form class="form-horizontal">
-			<div class="form-group">
-				<label for="username" class="col-sm-3 control-label">User Name:</label>
-				<div class="col-sm-9">
-					<input id="username" ng-model="username" type="text" class="form-control" />
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="password" class="col-sm-3 control-label">Password:</label>
-				<div class="col-sm-9">
-					<input id="password" ng-model="userpassword" type="password" class="form-control" />
-				</div>
-			</div>
-
-			<div class="form-group">
-				<div class="col-sm-9 col-sm-offset-3">
-					<input type="submit" value="Log In" class="btn btn-primary" ng-click="login()"/>
-				</div>
-			</div>
-		</form>
-	</div>
-	
-	<div class="col-md-6">
-		<p class="alert alert-info">Login with either user:user to read entries or with admin:admin to read and edit entries.</p>
-                <p>{{loginerror}} </p>
-	</div>
-
-</div>
+<div ng-show="mode" class="row">
+    <div class="page-header  col-lg-offset-1" >
+        <h2>Přihlášení</h2>
     </div>
+
+    <div class="row">
+
+        <div class="col-md-6">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="username" class="col-sm-3 control-label">Uživatelské jméno:</label>
+                    <div class="col-sm-9">
+                        <input id="username" ng-model="username" type="text" class="form-control" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-3 control-label">Heslo:</label>
+                    <div class="col-sm-9">
+                        <input id="password" ng-model="userpassword" type="password" class="form-control" />
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-9 col-sm-offset-3">
+                        <input type="submit" value="Log In" class="btn btn-primary" ng-click="login()"/>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="col-md-6">
+            <p class=""></p>
+            <p class="alert alert-info" ng-show="loginerroroccurred">{{loginerror}}</p>
+        </div>
+
+    </div>
+</div>
